--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
-<body>
+<body class="background">
   <h1>A Synchronous Swim</h1>
   <div class="pool">
     <div class="team">
@@ -22,6 +22,7 @@
 <script src="/node_modules/underscore/underscore.js"></script>
 <script src="/js/swimTeam.js"></script>
 <script src="/js/keypressHandler.js"></script>
+<script src="/js/httpHandler.js"></script>
 
 </html>
 
